Make w32-pthreads and jansson shared libraries

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -7,7 +7,6 @@ add_subdirectory(glad)
 
 set(BUILD_DOCS FALSE CACHE INTERNAL "" FORCE)
 set(STATIC_CRT TRUE CACHE INTERNAL "" FORCE)
-set(BUILD_SHARED_LIBS FALSE CACHE INTERNAL "" FORCE)
+set(BUILD_SHARED_LIBS TRUE CACHE INTERNAL "" FORCE)
 set(WITHOUT_TESTS TRUE CACHE INTERNAL "" FORCE)
 add_subdirectory(jansson)
-
