--- a/deps/w32-pthreads/CMakeLists.txt
+++ b/deps/w32-pthreads/CMakeLists.txt
@@ -2,7 +2,6 @@ project(w32-pthreads)
 
 add_definitions(-D__CLEANUP_C)
 add_definitions(-DPTW32_BUILD)
-add_definitions(-DPTW32_STATIC_LIB)
 
 set(w32-pthreads_SOURCES
 	pthread.c)
@@ -13,7 +12,9 @@ set(w32-pthreads_HEADERS
 	sched.h
 	semaphore.h)
 
-add_library(w32-pthreads STATIC
+add_library(w32-pthreads
 	${w32-pthreads_SOURCES}
 	${w32-pthreads_HEADERS})
 target_link_libraries(w32-pthreads)
+
+install_obs_core(w32-pthreads)
