Add 'SHARED' to add_library in w32-pthreads cmake

--- a/deps/w32-pthreads/CMakeLists.txt
+++ b/deps/w32-pthreads/CMakeLists.txt
@@ -12,7 +12,7 @@ set(w32-pthreads_HEADERS
 	sched.h
 	semaphore.h)
 
-add_library(w32-pthreads
+add_library(w32-pthreads SHARED
 	${w32-pthreads_SOURCES}
 	${w32-pthreads_HEADERS})
 target_link_libraries(w32-pthreads)
