--- a/deps/w32-pthreads/CMakeLists.txt
+++ b/deps/w32-pthreads/CMakeLists.txt
@@ -1,8 +1,5 @@
 project(w32-pthreads)
 
-add_definitions(-D__CLEANUP_C)
-add_definitions(-DPTW32_BUILD)
-
 set(w32-pthreads_SOURCES
 	pthread.c)
 
@@ -15,6 +12,10 @@ set(w32-pthreads_HEADERS
 add_library(w32-pthreads SHARED
 	${w32-pthreads_SOURCES}
 	${w32-pthreads_HEADERS})
+target_compile_definitions(w32-pthreads
+	PRIVATE __CLEANUP_C PTW32_BUILD)
+target_include_directories(w32-pthreads
+	PUBLIC .)
 target_link_libraries(w32-pthreads)
 
 install_obs_core(w32-pthreads)
