Add support for multi-screen setups
This patch adds support for multi-screen setups by using xinerama
information if available to determine the screen size and position.

In case xinerama is not available or not active it uses the information
provided for the x screen.

To clean up the code some generic helper functions were moved to a
separate source file.

--- a/plugins/linux-xshm/CMakeLists.txt
+++ b/plugins/linux-xshm/CMakeLists.txt
@@ -7,10 +7,12 @@ include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
 set(linux-xshm_SOURCES
 	linux-xshm.c
 	xcursor.c
+	xhelpers.c
 	xshm-input.c
 )
 set(linux-xshm_HEADERS
 	xcursor.h
+	xhelpers.h
 )
 
 add_library(linux-xshm MODULE
@@ -22,6 +24,7 @@ target_link_libraries(linux-xshm
 	${X11_LIBRARIES}
 	${X11_XShm_LIB}
 	${X11_Xfixes_LIB}
+	${X11_Xinerama_LIB}
 )
 
 install_obs_plugin(linux-xshm)
