Add basic OSX AV capture plugin
Currently only cameras using interleaved 4:2:2 YCbCr are supported, e.g.
recent internal iSight cameras

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -5,6 +5,7 @@ if(WIN32)
 	add_subdirectory(win-wasapi)
 	add_subdirectory(win-capture)
 elseif(APPLE)
+	add_subdirectory(mac-avcapture)
 	add_subdirectory(mac-capture)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	add_subdirectory(linux-xshm)
